<resources>
    <string name="hello">Hello World,  NavisDynamicUi</string>
    <string name="app_name">NavisDynamicUi</string>
    <string name="location_latti">+48.188903</string>
    <string name="location_longi">-122.117437</string>
    <string name="app_package">CascadeValley</string>
    <string name="global_versaworks">CASCADE VALLEY</string>
    <string name="global_save">Save</string>
    <string name="global_done">Done</string>
    <string name="global_appname">CASCADE VALLEY</string>
    <string name="global_ok">OK</string>
    <string name="global_cancel">Cancel</string>
    <string name="global_yes">YES</string>
    <string name="global_no">NO</string>
    <string name="global_supportEmailSubject">NavisHealth-Cascade Valley</string>
    <string name="global_supportEmail">support@navishealth.com</string>
    <string name="about_header">ABOUT</string>
    <string name="about_naavisversion">Engage \n Version 1.0.0_S</string>
    <string name="about_naavisbuild">\t(Build 1656,424fd209)\n © 2014 NavisHealth Solutions</string>
    <string name="about_review">PLAY STORE</string>
    <string name="about_emailsupport">EMAIL SUPPORT</string>
    <string name="about_termsnconditions">TERMS AND CONDITIONS</string>
    <string name="changeforgotpassword_header">PASSWORD</string>
    <string name="changeforgotpassword_newPassword">New Password</string>
    <string name="changeforgotpassword_continueLogin">Continue to Login</string>
    <string name="contact_header">CONTACT US</string>
    <string name="contact_sendQuestion">SEND US A QUESTION</string>
    <string name="contact_phone">PHONE</string>
    <string name="contact_phonenumber"> (360) 435 2133</string>
    <string name="contact_phonenum">3604352133</string>
    <string name="contact_address">ADDRESS</string>
    <string name="contact_addtoContact">ADD TO MY CONTACT</string>
    <string name="contact_contactadded">Contact added successfully</string>
    <string name="contact_addresshospital">Cascade Valley Hospital</string>
    <string name="contact_addressinfo">330 S. Stillaguamish, Arlington, WA 98223</string>
    <string name="createappointment_header">CREATE APPOINTMENT</string>
    <string name="createappointment_dateformat">mm/dd/yyyy</string>
    <string name="createappointment_timeformat">hh:mm</string>
    <string name="createappointment_date">Date</string>
    <string name="createappointment_time">Time</string>
    <string name="createappointment_name">Name</string>
    <string name="createappointment_phone">Phone Number</string>
    <string name="createappointment_emailaddress">Email Address</string>
    <string name="createappointment_comment">Please enter comment.</string>
    <string name="createappointment_newphysician">Enter physician name</string>
    <string name="createappointment_submit">Submit</string>
    <string name="enrolluser_header">WELCOME TO CASCADE VALLEY</string>
    <string name="enrolluser_fname">First Name</string>
    <string name="enrolluser_lname">Last Name</string>
    <string name="enrolluser_phone">Phone Number</string>
    <string name="enrolluser_email">Email Address</string>
    <string name="enrolluser_dob">Date of Birth</string>
    <string name="enrolluser_mr">Enter Medical Record No.</string>
    <string name="enrolluser_tnc">By signing up, you agree to our</string>
    <string name="enrolluser_tnctext">  T&amp;C\'s</string>
    <string name="enrolluser_signup">Sign Up</string>
    <string name="feedback_header">FEEDBACK</string>
    <string name="feedback_thanksmessage">Thanks for coming</string>
    <string name="feedback_ratingvisit">Please rate your visit</string>
    <string name="feedback_ratingrecovery">Please rate your recovery</string>
    <string name="feedback_comment">Type comment here</string>
    <string name="feedback_submit">Submit</string>
    <string name="fitbit_header">FITBIT</string>
    <string name="fitbit_trackingactivity">Tracking your daily activity is great way to motivate you to be more active</string>
    <string name="fitbit_fitbitdevice">Fitbit is a device that allows you to automatically track your activity</string>
    <string name="fitbit_connecttofitbit">Connect your Fitbit Account</string>
    <string name="forgotpassworda_header">FORGOT PASSWORD</string>
    <string name="forgotpassworda_entermemberinfo">Enter your member information </string>
    <string name="forgotpassworda_entermailid">Enter your Email</string>
    <string name="forgotpassworda_enter_member_record_no">Enter Medical Record No </string>
    <string name="forgotpassworda_next">Next</string>
    <string name="forgotpasswordb_confirm_basic_information">Confirm basic information about yourself, then answer up to 3 security questions.</string>
    <string name="forgotpasswordb_answer">Answer :</string>
    <string name="forgotpasswordb_question">Question :</string>
    <string name="forgotpasswordc_enter_uniqueId">Enter your Unique Id sent during signup</string>
    <string name="forgotpasswordc_accept_conditions">I\'ve read about and understand</string>
    <string name="forgotpasswordc_submit">Submit</string>
    <string name="home_header">Submit</string>
    <string name="home_trackyourhealth">TRACK YOUR HEALTH</string>
    <string name="home_firstAidLibraries">FIRST AID &amp; HEALTH LIBRARY</string>
    <string name="home_service">SERVICES</string>
    <string name="home_physician">PHYSICIANS</string>
    <string name="home_record">VIEW RECORDS</string>
    <string name="home_location">LOCATION</string>
    <string name="labresults_header">LAB RESULTS</string>
    <string name="labresults_itemdate">Lab result for date:</string>
    <string name="labresults_itemname">Test:</string>
    <string name="labresults_itemresult">Result:</string>
    <string name="login_header">LOGIN</string>
    <string name="login_uname">Email Address</string>
    <string name="login_pass">Password</string>
    <string name="login_remember">Remember me</string>
    <string name="login_login">Login</string>
    <string name="login_forgetpass">Forgot password?</string>
    <string name="login_enrolluser">Click here to Enroll</string>
    <string name="login_guest">Continue as Guest</string>
    <string name="newenrollassword_header">WELCOME TO VERSAWORKS</string>
    <string name="newenrollassword_password">Enter Password</string>
    <string name="newenrollassword_confpassword">Confirm Password</string>
    <string name="newenrollassword_submit">Submit</string>
    <string name="physicianinfo_header">INFO</string>
    <string name="physicianinfo_speciality">Specialty :</string>
    <string name="physicianinfo_address">Office Address :</string>
    <string name="physicianinfo_phone">Phone :</string>
    <string name="physicianinfo_email">Email :</string>
    <string name="physicianinfo_fax">Fax :</string>
    <string name="physicianinfo_addcontact">ADD TO MY CONTACT</string>
    <string name="prescription_header">PRESCRIPTIONS</string>
    <string name="prescription_itemdate">Date Administered:</string>
    <string name="prescription_itemname">Medication:</string>
    <string name="prescription_itemresult">Dose:</string>
    <string name="patientrecord_header">PATIENT RECORD</string>
    <string name="patientrecord_name">PATIENT NAME</string>
    <string name="patientrecord_dob">DATE OF BIRTH</string>
    <string name="patientrecord_sex">SEX</string>
    <string name="patientrecord_race">RACE</string>
    <string name="patientrecord_ethnicity">ETHNICITY</string>
    <string name="patientrecord_prefferedlanguage">PREFFERED LANGUAGE</string>
    <string name="patientrecord_smokingstatus">SMOKING STATUS</string>
    <string name="patientrecord_problems">Problems</string>
    <string name="patientrecord_medications">Medications</string>
    <string name="patientrecord_allergies">Allergies</string>
    <string name="patientrecord_labtest">Laboratory Test/Results</string>
    <string name="patientrecord_vitalsign">VitalSigns</string>
    <string name="patientrecord_careplan">CarePlans</string>
    <string name="patientrecord_procedure">Procedures</string>
    <string name="patientrecord_careteam">CareTeam</string>
    <string name="patientrecord_encounterinfo">Encounter Information</string>
    <string name="patientencounterinfo_diagnosis">Encounter Diagnosis</string>
    <string name="dateaddmitted">Admission Date</string>
    <string name="datedischarhed">Discharge Date</string>
    <string name="locationdischarge">Location</string>
    <string name="patientencounterinfo_function">Functional Status</string>
    <string name="patientencounterinfo_hositalizationreason">Reason of Hospitalization</string>
    <string name="patientencounterinfo_dischargeinstruction">Discharge Instruction</string>
    <string name="patientencounterinfo_immunization">Immunization</string>
    <string name="record_header">APPOINTMENTS</string>
    <string name="resetpassword_header">RESET PIN</string>
    <string name="resetpassword_oldpass">Old PIN</string>
    <string name="resetpassword_newpass">New PIN</string>
    <string name="resetpassword_confnewpass">Confirm New PIN</string>
    <string name="termsncondition_header">TERMS &amp; CONDITIONS</string>
    <string name="verifyingEmailId">Verifying email Id...</string>
</resources>