<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_home"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingTop="60dp" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >
            <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/location_color"
            android:contentDescription="@string/app_name" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="130dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:orientation="horizontal" >

                <LinearLayout
                    android:id="@+id/layout_healthtrack"
                    android:layout_width="0dp"
                    android:layout_height="130dp"
                    android:layout_weight="1"
                    android:background="@drawable/dialog_background"
                    android:gravity="center"
                    android:orientation="vertical" >

                    <ImageView
                        android:id="@+id/image_option1"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/ic_launcher"
                        android:contentDescription="@string/app_name" />

                    <TextView
                     	android:id="@+id/option1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:gravity="center_horizontal"
                        android:minLines="3"
                        android:text="@string/home_trackyourhealth"
                        android:textColor="@color/color_darkGray"
                        android:textSize="@dimen/text_size" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/layout_firstsaidlibrary"
                    android:layout_width="0dp"
                    android:layout_height="130dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/dialog_background"
                    android:gravity="center"
                    android:orientation="vertical" >

                    <ImageView
                         android:id="@+id/image_option2"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/ic_launcher"
                        android:contentDescription="@string/app_name" />

                    <TextView
                        android:id="@+id/option2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:gravity="center_horizontal"
                        android:minLines="3"
                        android:paddingBottom="3dp"
                        android:paddingLeft="3dp"
                        android:paddingRight="3dp"
                        android:text="@string/home_firstAidLibraries"
                        android:textColor="@color/color_darkGray"
                        android:textSize="@dimen/text_size" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/layout_services"
                    android:layout_width="0dp"
                    android:layout_height="130dp"
                    android:layout_weight="1"
                    android:background="@drawable/dialog_background"
                    android:gravity="center"
                    android:orientation="vertical" >

                    <ImageView
                        android:id="@+id/image_option3"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/ic_launcher"
                        android:contentDescription="@string/app_name" />

                    <TextView
                        android:id="@+id/option3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:gravity="center_horizontal"
                        android:minLines="3"
                        android:text="@string/home_service"
                        android:textColor="@color/color_darkGray"
                        android:textSize="@dimen/text_size" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="130dp"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:orientation="horizontal" >

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="130dp"
                    android:layout_weight="0.65"
                    android:background="@drawable/dialog_background"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:visibility="invisible" >
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/layout_physician"
                    android:layout_width="0dp"
                    android:layout_height="130dp"
                    android:layout_weight="1"
                    android:background="@drawable/dialog_background"
                    android:gravity="center"
                    android:orientation="vertical" >

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/ic_launcher"
                        android:contentDescription="@string/app_name" />

                    <TextView
                        android:id="@+id/option4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:gravity="center_horizontal"
                        android:minLines="2"
                        android:text="@string/home_physician"
                        android:textColor="@color/color_darkGray"
                        android:textSize="@dimen/text_size" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/layout_records"
                    android:layout_width="0dp"
                    android:layout_height="130dp"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/dialog_background"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="5dp"
                    android:visibility="gone" >

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:background="@drawable/records"
                        android:contentDescription="@string/app_name" />

                    <TextView
                        android:id="@+id/option5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:gravity="center_horizontal"
                        android:minLines="2"
                        android:text="@string/home_record"
                        android:textColor="@color/color_darkGray"
                        android:textSize="@dimen/text_size" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/layout_location"
                    android:layout_width="0dp"
                    android:layout_height="130dp"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/dialog_background"
                    android:gravity="center"
                    android:orientation="vertical" >

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/ic_launcher"
                        android:contentDescription="@string/app_name" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:gravity="center_horizontal"
                        android:minLines="2"
                        android:text="@string/home_location"
                        android:textColor="@color/color_darkGray"
                        android:textSize="@dimen/text_size" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="130dp"
                    android:layout_weight="0.65"
                    android:background="@drawable/dialog_background"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:visibility="invisible" >
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>